fix - Change color icon dark mode

--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -29,7 +29,7 @@ body {
     }
 
     .bi { font-size: 13px; }
-    .bi-moon-fill { color: #f1c40f; }
+    .bi-moon-fill { color: #DDD; }
     .bi-brightness-high-fill { color: #f39c12; }
 }
 
